# elk-fastapi-app-monitoring

./: .env.template  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  Taskfile.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/: CODEOWNERS  settings.yml
.github/workflows/: build-ci.yml  release-ci.yml
apis/: app.py
apps/: app.py
elasticsearch/: elasticsearch.yml
logstash/pipeline/: logstash.conf
src/elasticsearch_logstash_kibana/controllers/: users.py
src/elasticsearch_logstash_kibana/database/: db.py
src/elasticsearch_logstash_kibana/models/: users.py
tests/: example_test.py
